--- a/cloud-resume-challenge/resume-site/assets/css/main.css
+++ b/cloud-resume-challenge/resume-site/assets/css/main.css
@@ -578,192 +578,37 @@ a:hover
 
 
 
-/** 8. Content Area --> Work
+/** 8. Content Area --> Project
 *******************************************************************/
 
-#work .showcase .item
-{
-    position: relative;
-
-    overflow: hidden;
-
-    width: 100%;
-    height: 24rem;
-    margin: 0;
-    margin-bottom: 6vh;
-
-    cursor: pointer;
-
-    border-radius: 3rem;
-    background: #111;
-}
-
-#work .showcase .item:last-child
+#project .services-list
 {
     margin-bottom: 0;
-}
-
-#work .showcase .item .info
-{
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-
-    width: 0;
-    height: 100%;
-
-    -webkit-transition: .25s ease;
-         -o-transition: .25s ease;
-            transition: .25s ease;
-
-    color: #fff;
-    background: #008aff;
-}
-
-#work .showcase .item:hover .info
-{
-    width: 100%;
-}
-
-#work .showcase .item .info .container-mid
-{
-    position: absolute;
-    top: 50%;
-    left: 0;
-
-    width: 100%;
-    padding: 0 6rem;
-
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-}
-
-#work .showcase .item .info .container-mid h5
-{
-    -webkit-transform: translateX(4vh);
-        -ms-transform: translateX(4vh);
-            transform: translateX(4vh);
-
-    opacity: 0;
-    color: #fff;
-}
-
-#work .showcase .item:hover .info .container-mid h5
-{
-    -webkit-transition: .2s ease .2s;
-         -o-transition: .2s ease .2s;
-            transition: .2s ease .2s;
-    -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-            transform: translateX(0);
-
-    opacity: 1;
-}
-
-#work .showcase .item .info .container-mid p
-{
-    position: relative;
-
-    padding-left: 2.7rem;
-
-    -webkit-transform: translateX(4vh);
-        -ms-transform: translateX(4vh);
-            transform: translateX(4vh);
-    letter-spacing: .025em;
-
-    opacity: 0;
-}
-
-#work .showcase .item:hover .info .container-mid p
-{
-    -webkit-transition: .2s ease .3s;
-         -o-transition: .2s ease .3s;
-            transition: .2s ease .3s;
-    -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-            transform: translateX(0);
-
-    opacity: 1;
-}
-
-#work .showcase .item .info .container-mid p:before
-{
-    position: absolute;
-    top: 50%;
-    left: 0;
-
-    width: 1.1em;
-    height: 1px;
-
-    content: '';
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-
-    background: #fff;
-}
-
-#work .showcase .item .background-image
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-.featherlight .featherlight-content
-{
-    max-height: 95%;
     padding: 0;
 
-    border-bottom: 0;
+    list-style: none;
 }
 
-.featherlight .featherlight-content  .featherlight-close-icon
+#project .services-list li
 {
     font-size: 2.4rem;
-    line-height: 1em;
-
-    top: .5em;
-    right: .5em;
-
-    width: 1em;
-
-    outline: none !important;
+    line-height: 3.4em;
 }
 
-.featherlight .featherlight-content .work-lightbox
+#project .services-list li i
 {
-    max-width: 1000px;
-    padding: 6vh;
+    font-size: 2rem;
+    line-height: 3em;
+
+    width: 3em;
+    height: 3em;
+    margin-right: 1.5em;
 
     text-align: center;
-}
 
-.featherlight .featherlight-content .work-lightbox img
-{
-    margin: 0 auto 4vh auto;
-}
-
-.featherlight .featherlight-content .work-lightbox p.subline
-{
-    margin-bottom: 1em;
-
-    letter-spacing: .025em;
-}
-
-.featherlight .featherlight-content .work-lightbox p
-{
-    max-width: 520px;
-    margin: 0 auto;
+    color: #fff;
+    border-radius: 100px;
+    background: #111;
 }
 
 
